[package]
name = "txengine"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine"
path = "src/lib.rs"

[dev-dependencies]
csv-diff = "0.1.1"

[dependencies]
anyhow = "1.0.95"
csv = "1.3.1"
nohash = "0.2.0"
rust_decimal = { version = "1.36.0", features = ["serde-float", "serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.36.0"
serde = { version = "1.0.217", features = ["derive"] }
